--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,23 @@
 # 정적 리소스에 변화가 있을 때 바로 반영한다. 
 spring.devtools.livereload.enabled=true 
 
-
 # thymeleaf에 대한 캐시를 남기지 않는다. cache=false 설정(운영시는 true) 
 spring.thymeleaf.cache=false 
 
 # templates 디렉토리에 파일이 있는지 없는지 체크, 없으면 에러를 발생시킨다. 
 spring.thymeleaf.check-template-location=true
+
+spring.datasource.hikari.driver-class-name=org.mariadb.jdbc.Driver
+spring.datasource.hikari.jdbc-url=jdbc:mariadb://localhost:3306/headlock_db?characterEncoding=UTF-8&serverTimezone=UTC
+spring.datasource.hikari.username=test
+spring.datasource.hikari.password=0000
+
+
+mybatis.configuration.map-underscore-to-camel-case=true
+mybatis.configuration.return-instance-for-empty-row=true
+
+
+spring.mvc.view.prefix=/WEB-INF/views/
+spring.mvc.view.suffix=.jsp
+
+
