--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,7 +11,9 @@ spring.datasource.hikari.driver-class-name=org.mariadb.jdbc.Driver
 spring.datasource.hikari.jdbc-url=jdbc:mariadb://headlock-database.cm5hraeacyqy.ap-northeast-2.rds.amazonaws.com:3306/DB?characterEncoding=UTF-8&serverTimezone=UTC
 spring.datasource.hikari.username=admin
 spring.datasource.hikari.password=cjddmsck123
-
+#spring.datasource.hikari.jdbc-url=jdbc:mariadb://localhost:3306/headlock_db?characterEncoding=UTF-8&serverTimezone=UTC
+#spring.datasource.hikari.username=test
+#spring.datasource.hikari.password=0000
 
 mybatis.configuration.map-underscore-to-camel-case=true
 mybatis.configuration.return-instance-for-empty-row=true
